--- a/ultralytics/cfg/models/v8/yolov8-AFPN-P345.yaml
+++ b/ultralytics/cfg/models/v8/yolov8-AFPN-P345.yaml
@@ -8,7 +8,7 @@ scales: # model compound scaling constants, i.e. 'model=yolov8n.yaml' will call 
   n: [0.33, 0.25, 1024]  # YOLOv8n summary: 225 layers,  3157200 parameters,  3157184 gradients,   8.9 GFLOPs
   s: [0.33, 0.50, 1024]  # YOLOv8s summary: 225 layers, 11166560 parameters, 11166544 gradients,  28.8 GFLOPs
   m: [0.67, 0.75, 768]   # YOLOv8m summary: 295 layers, 25902640 parameters, 25902624 gradients,  79.3 GFLOPs
-  l: [1.00, 1.00, 512]   # YOLOv8l summary: 365 layers, 43691520 parameters, 43691504 gradients, 158.3 GFLOPs
+  l: [1.00, 1.00, 512]   # YOLOv8l summary: 365 layers, 43691520 parameters, 43691504 gradients, 165.7 GFLOPs
   x: [1.00, 1.25, 512]   # YOLOv8x summary: 365 layers, 68229648 parameters, 68229632 gradients, 258.5 GFLOPs
 
 # YOLOv8.0n backbone
@@ -27,28 +27,4 @@ backbone:
 
 # YOLOv8.0n head
 head:
-  - [[2, 4, 6, 9], 1, SimFusion4In, []] # 10
-  - [-1, 1, IFM, [[64, 32]]] # 11
-   
-  - [9, 1, Conv, [512, 1, 1]] # 12
-  - [[4, 6, -1], 1, SimFusion3In, [512]] # 13
-  - [[-1, 11], 1, InjectionMultiSumAutoPool, [512, [64, 32], 0]] # 14
-  - [-1, 3, C2f, [512, False]] # 15
-
-  - [6, 1, Conv, [256, 1, 1]] # 16
-  - [[2, 4, -1], 1, SimFusion3In, [256]] # 17
-  - [[-1, 11], 1, InjectionMultiSumAutoPool, [256, [64, 32], 1]] # 18
-  - [-1, 3, C2f, [256, False]] # 19
-
-  - [[19, 15, 9], 1, PyramidPoolAgg, [352, 2]] # 20
-  - [-1, 1, TopBasicLayer, [352, [64, 128]]] # 21
-
-  - [[19, 16], 1, AdvPoolFusion, []] # 22
-  - [[-1, 21], 1, InjectionMultiSumAutoPool, [256, [64, 128], 0]] # 23
-  - [-1, 3, C2f, [256, False]] # 24
-
-  - [[-1, 12], 1, AdvPoolFusion, []] # 25
-  - [[-1, 21], 1, InjectionMultiSumAutoPool, [512, [64, 128], 1]] # 26
-  - [-1, 3, C2f, [512, False]] # 27
-
-  - [[19, 24, 27], 1, Detect, [nc]]  # Detect(P3, P4, P5)
+  - [[4, 6, 9], 1, Detect_AFPN_P345, [nc, 128]]  # Detect(P3, P4, P5)
