[Fix] fix docker

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -29,22 +29,22 @@ ADD https://github.com/ultralytics/assets/releases/download/v0.0.0/yolov8n.pt /u
 
 # Install pip packages
 RUN python3 -m pip install --upgrade pip wheel setuptools
-RUN git clone https://github.com/open-mmlab/mmcv.git /usr/src/mmcv && \
-    cd /usr/src/mmcv && \
-    git checkout 2.x && git rev-parse --short HEAD && \
-    pip install --no-cache-dir -e .[all] -v
-
-RUN pip install --no-cache -e ".[export]" albumentations comet pycocotools pytest-cov && \
-    # Due to error when installing albumentations
-    # module 'cv2.dnn' has no attribute 'DictValue'
-    # Downgrade opencv version to 4.8.0.74
-    pip uninstall \
+# Due to error when installing albumentations
+# module 'cv2.dnn' has no attribute 'DictValue'
+# Downgrade opencv version to 4.8.0.74
+RUN pip uninstall \
         --yes \
             opencv-python-headless \
             opencv-python && \
     pip install \
         --no-cache \
-            opencv-python==4.8.0.74
+            opencv-python==4.8.0.74 && \
+    # dcnv3
+    git clone https://github.com/open-mmlab/mmcv.git /usr/src/mmcv && \
+    cd /usr/src/mmcv && \
+    pip install --no-cache-dir -e .[all] -v
+
+RUN pip install --no-cache -e ".[export]" albumentations comet pycocotools pytest-cov && \
 
 # Run exports to AutoInstall packages
 RUN yolo export model=tmp/yolov8n.pt format=edgetpu imgsz=32
