--- a/ultralytics/cfg/models/v8/yolov8-c2f-dyhead-DCNV3.yaml
+++ b/ultralytics/cfg/models/v8/yolov8-c2f-dyhead-DCNV3.yaml
@@ -16,7 +16,7 @@ backbone:
   # [from, repeats, module, args]
   - [-1, 1, Conv, [64, 3, 2]]  # 0-P1/2
   - [-1, 1, Conv, [128, 3, 2]]  # 1-P2/4
-  - [-1, 3, C2f, [128, True]]
+  - [-1, 3, C2f_DCNv3, [128, True]]
   - [-1, 1, Conv, [256, 3, 2]]  # 3-P3/8
   - [-1, 6, C2f_DCNv3, [256, True]]
   - [-1, 1, Conv, [512, 3, 2]]  # 5-P4/16
@@ -29,19 +29,19 @@ backbone:
 head:
   - [-1, 1, nn.Upsample, [None, 2, 'nearest']]
   - [[-1, 6], 1, Concat, [1]]  # cat backbone P4
-  - [-1, 3, C2f, [512]]  # 12
+  - [-1, 3, C2f_DCNv3, [512]]  # 12
 
   - [-1, 1, nn.Upsample, [None, 2, 'nearest']]
   - [[-1, 4], 1, Concat, [1]]  # cat backbone P3
-  - [-1, 3, C2f, [256]]  # 15 (P3/8-small)
+  - [-1, 3, C2f_DCNv3, [256]]  # 15 (P3/8-small)
 
   - [-1, 1, Conv, [256, 3, 2]]
   - [[-1, 12], 1, Concat, [1]]  # cat head P4
-  - [-1, 3, C2f, [512]]  # 18 (P4/16-medium)
+  - [-1, 3, C2f_DCNv3, [512]]  # 18 (P4/16-medium)
 
   - [-1, 1, Conv, [512, 3, 2]]
   - [[-1, 9], 1, Concat, [1]]  # cat head P5
-  - [-1, 3, C2f, [1024]]  # 21 (P5/32-large)
+  - [-1, 3, C2f_DCNv3, [1024]]  # 21 (P5/32-large)
 
   - [[15, 18, 21], 1, Detect_DyHeadWithDCNV3, [nc, 128, 1]]  # Detect(P3, P4, P5)
   
