--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,8 @@ pillow>=7.1.2
 pyyaml>=5.3.1
 requests>=2.23.0
 scipy>=1.4.1
-torch>=1.8.0
+# Install torch by yourself
+# torch>=1.8.0
 torchvision>=0.9.0
 tqdm>=4.64.0
 
