--- a/ultralytics/cfg/models/v8/yolov8-p6-DCNv3.yaml
+++ b/ultralytics/cfg/models/v8/yolov8-p6-DCNv3.yaml
@@ -16,7 +16,7 @@ backbone:
   # [from, repeats, module, args]
   - [-1, 1, Conv, [64, 3, 2]]  # 0-P1/2
   - [-1, 1, Conv, [128, 3, 2]]  # 1-P2/4
-  - [-1, 3, C2f, [128, True]]
+  - [-1, 3, C2f_Faster, [128, True]]
   - [-1, 1, Conv, [256, 3, 2]]  # 3-P3/8
   - [-1, 6, C2f_CloAtt, [256, True]]
   - [-1, 1, Conv, [512, 3, 2]]  # 5-P4/16
@@ -54,4 +54,4 @@ head:
   - [[-1, 12], 1, Concat, [1]]  # cat head P6
   - [-1, 3, C2f_DCNv3, [1024, False]]  # 29 (P6/64-xlarge)
 
-  - [[21, 24, 27, 30], 1, Detect_DyHeadWithDCNV3, [nc, 256, 1]]  # Detect(P3, P4, P5, P6)
+  - [[21, 24, 27, 30], 1, DetectEfficient, [nc]]  # Detect(P3, P4, P5, P6)
