--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ scipy>=1.4.1
 # torch>=1.8.0
 torchvision>=0.9.0
 tqdm>=4.64.0
+einops
 
 # Logging -------------------------------------
 # tensorboard>=2.13.0
