--- a/ultralytics/cfg/models/v8/yolov8-p6-DCNv3.yaml
+++ b/ultralytics/cfg/models/v8/yolov8-p6-DCNv3.yaml
@@ -51,6 +51,7 @@ head:
   - [-1, 3, C2f_Faster, [768, False]]  # 26 (P5/32-large)
 
   - [-1, 1, Conv, [768, 3, 2]]
+  - [10, 1, CAM, ['adaptive']]
   - [[-1, 12], 1, Concat, [1]]  # cat head P6
   - [-1, 3, C2f_DCNv3, [1024, False]]  # 29 (P6/64-xlarge)
 
