--- a/ultralytics/cfg/default.yaml
+++ b/ultralytics/cfg/default.yaml
@@ -121,6 +121,7 @@ auto_augment: randaugment # (str) auto augmentation policy for classification (r
 erasing: 0.4 # (float) probability of random erasing during classification training (0-0.9), 0 means no erasing, must be less than 1.0.
 crop_fraction: 1.0 # (float) image crop fraction for classification (0.1-1), 1.0 means no crop, must be greater than 0.
 weighted_loader: false # (bool) whether to use weighted loader to handle data imbalance
+class_weights: null # (str | list, optional) class weights list, 'linear' or 'sqrt' for weighted loader
 
 # Custom config.yaml ---------------------------------------------------------------------------------------------------
 cfg: # (str, optional) for overriding defaults.yaml
