--- a/ultralytics/cfg/default.yaml
+++ b/ultralytics/cfg/default.yaml
@@ -15,7 +15,7 @@ imgsz: 640 # (int | list) input images size as int for train and val modes, or l
 min_size: 20 # (int) min size of original image for clf task / min size of original bbox for detect task
 save: True # (bool) save train checkpoints and predict results
 save_period: -1 # (int) Save checkpoint every x epochs (disabled if < 1)
-cache: False # (bool) True/ram, disk or False. Use cache for data loading
+cache: False # (bool) True/ram, low-ram, disc or False. Use cache for data loading. Use low-ram if you have unsufficient ram memory, but want better speed than False variant
 device: # (int | str | list, optional) device to run on, i.e. cuda device=0 or device=0,1,2,3 or device=cpu
 workers: 8 # (int) number of worker threads for data loading (per RANK if DDP)
 project: # (str, optional) project name
