[FIX] sahi train fixed

--- a/ultralytics/cfg/default.yaml
+++ b/ultralytics/cfg/default.yaml
@@ -135,7 +135,7 @@ albu_contrast: 0.4
 albu_saturation: 0.3 
 albu_hue: 0.3
 crop_size: 1024
-pixel_dropout_prob: 0.02
+pixel_dropout_prob: 0.01
 pixel_drop_value: 0
 fog_max: 0.8
 fog_alpha: 0.05
@@ -143,14 +143,14 @@ snow_max: 0.25
 snow_bright: 2.0
 clahe_clip: 2.0
 p_clahe: 0.0
-bright_limit: 0.2
-p_sharpen: 0.0
-contrast_limit: 0.2
-p_bricon: 0.0
+bright_limit: 0.3
+p_sharpen: 0.4
+contrast_limit: 0.35
+p_bricon: 0.25
 p_fog_snow: 0.3
-p_pixeldrop: 0.0
+p_pixeldrop: 0.07
 p_color: 0.2
-p_gray: 0.2
+p_gray: 0.3
 p_rain: 0.05
 p_snow: 0.05
 p_BrightnessContrast: 0.0
@@ -187,8 +187,10 @@ do_finetune: True
 
 # SAHI settings -------------------------------------------------------------------------------------------------
 sahi: False #  if True,  
-cut_strategy: grid # grid or single-crop
-slice_size: 640 # let be equal to imgsz param
+cut_strategy: grid # grid or random_crop
+crop_size: 640 #
 overlap_ratio: 0.2
-crop_threshold: 1024  # минимальная площадь изображения для RandomCropLarge
+crop_threshold: 1024  # минимальная площадь изображения для RandomCropLarge (то есть с каких изображений будем брать bg)
 bg_crop_prob: 0.1       # вероятность применения RandomCropLarge (увеличение background)
+erosion_factor: 0
+p_sahi_crop: 1
